[CORE] Complete Phase 2 & Phase 2.5: Move to Components. Fix all the Menus. Remove the API
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>